fix emoji picker bg

--- a/main.css
+++ b/main.css
@@ -25,6 +25,6 @@
 
 
 }
-.searchBarComponent-32dTOx, .search-36MZv- {
+.searchBarComponent-32dTOx, .search-36MZv-, .inspector-S2gM3e {
     background-color: var(--background-secondary) !important;
 }
