--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-@import url("https://raw.githack.com/KraXen72/harmony-discord/master/main.css"); 
+@import url("https://kraxen72.github.io/harmony-discord/main.css); 
 :root {
     /*gruvbox override*/
     --Colleft: var(--slate-background);
