--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-@import url("https://kraxen72.github.io/harmony-discord/main.css); 
+@import url("https://raw.githack.com/KraXen72/harmony-discord/master/main.css"); 
 :root {
     /*gruvbox override*/
     --Colleft: var(--slate-background);
@@ -25,7 +25,23 @@
 
 
 }
-.searchBarComponent-32dTOx, .search-36MZv-, .inspector-S2gM3e {
-    background-color: var(--background-secondary) !important;
-}
-::selection {background: var(--ColAccentAlpha)}
+.searchBarComponent-32dTOx, .search-36MZv- 
+{background-color: var(--background-secondary) !important;}
+
+.inspector-S2gM3e, .input-1Rv96N, .uploadModal-2ifh8j, .footer-3mqk7D.hasSpoilers-1IRtQC 
+{background-color: var(--background-primary) !important}
+
+.lookFilled-1Gx00P.colorBrand-3pXr91 
+{background-color: var(--ColAccent) !important;}
+
+.autocompleteInner-zh20B_ 
+{background-color: var(--Colleft) !important;}
+
+::selection {background-color: var(--ColAccentAlpha) !important;}
+
+.selected-1Tbx07 {background-color: var(--background-modifier-selected) !important;}
+.topSectionNormal-2-vo2m {background-color: #202225 !important;}
+.body-3ND3kc, .theme-dark .body-3iLsc4, .theme-dark .footer-1fjuF6 {background-color: #282828;}
+.connectedAccount-36nQx7 {border: 1px solid rgba(0,0,0,0.2) !important;}
+
+.colorDefault-2K3EoJ.focused-3afm-j {background-color: var(--background-modifier-selected) !important;}
