--- a/main.css
+++ b/main.css
@@ -28,7 +28,7 @@
 .searchBarComponent-32dTOx, .search-36MZv- 
 {background-color: var(--background-secondary) !important;}
 
-.inspector-S2gM3e, .input-1Rv96N, .uploadModal-2ifh8j, .footer-3mqk7D.hasSpoilers-1IRtQC 
+.inspector-S2gM3e, .input-1Rv96N, .uploadModal-2ifh8j, .footer-3mqk7D.hasSpoilers-1IRtQC, .theme-dark .root-1gCeng, .message-2qRu38
 {background-color: var(--background-primary) !important}
 
 .lookFilled-1Gx00P.colorBrand-3pXr91 
@@ -41,7 +41,7 @@
 
 .selected-1Tbx07 {background-color: var(--background-modifier-selected) !important;}
 .topSectionNormal-2-vo2m {background-color: #202225 !important;}
-.body-3ND3kc, .theme-dark .body-3iLsc4, .theme-dark .footer-1fjuF6 {background-color: #282828;}
+.body-3ND3kc, .theme-dark .body-3iLsc4, .theme-dark .footer-1fjuF6, .theme-dark .footer-2gL1pp {background-color: #282828;}
 .connectedAccount-36nQx7 {border: 1px solid rgba(0,0,0,0.2) !important;}
 
 .colorDefault-2K3EoJ.focused-3afm-j {background-color: var(--background-modifier-selected) !important;}
