fix video and screen buttons

--- a/main.css
+++ b/main.css
@@ -45,3 +45,4 @@
 .connectedAccount-36nQx7 {border: 1px solid rgba(0,0,0,0.2) !important;}
 
 .colorDefault-2K3EoJ.focused-3afm-j {background-color: var(--background-modifier-selected) !important;}
+.button-1YfofB.buttonColor-7qQbGO {color: #fff !important; }
